--- a/core/templates/about/about.html
+++ b/core/templates/about/about.html
@@ -16,19 +16,46 @@
   </div>
 </section>
 
-            <section class="case-details-area pb-120">
-            <div class="container">
+                <section class="testimonial-area pb-120">
+              <div class="container">
+                <div class="row g-4 justify-content-between">
+                  <div class="col-lg-5">
+                    <div class="testimonial__item-left">
+                      {% if about_us %}
+                        <h2 class="fw-600 wow splt-txt" data-splitting>
+                          {{ about_us.title }}
+                        </h2>
+                        <div class="wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                          <p class="award-title">
+                            {{ about_us.content }}
+                          </p>
+                        </div>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
 
-
-
+                <!-- Video area start here -->
+            <div class="banner-video mt-0">
+                <div class="container">
+                    <div class="banner-video__image image">
 {% if about_us.video %}
-  <video width="600" controls>
+  <video width="600" style="padding: 20px;
+    display: flex;
+  align-items: center;
+
+width: 100%;" controls>
       <source src="{{ about_us.video.url }}" type="video/mp4">
       مرورگر شما از پخش ویدیو پشتیبانی نمی‌کند.
   </video>
 {% endif %}
-                        </div>
-            </section>
+                    </div>
+                </div>
+            </div>
+            <!-- Video area end here -->
+
 
 
             
