--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
           <link rel="canonical" href="{{ request.build_absolute_uri }}">
         {% endif %}
       {% endblock %}
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/45.0.0/ckeditor5.css" />
     <!-- Favicon img -->
     <link rel="shortcut icon" href="{% static "images/favicon.png" %}">
     <!-- Bootstrap min css -->
