--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -32,7 +32,9 @@
                                     </div>
                                     <h1 class="mb-1">{{ article.title }}
                                     </h1>
+                                                        <div class="container ck-content">
                                     <p class="mb-10">{{ article.content|safe }}</p>
+                                                        </div>
                                     <p class="mb-10">{{ article.author }}</p>
                                     <h3 class="fw-300 mb-10"></h3>
                                 </div>
