Add image styles to products and product types

--- a/product/templates/product-details.html
+++ b/product/templates/product-details.html
@@ -33,7 +33,9 @@
                             <div class="case-details__wrp">
                               <br />
                               <h3>{{ product.title }}</h3>
+                                                    <div class="container ck-content">
                               <p>{{ product.description|safe }}</p>
+                                                    </div>
                             </div>
                           </div>
                         </section>
