Add meta robots for blogs

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="robots" content="{{ meta_robots|default:'index, follow' }}">
+
+
       <title>{% block meta_title %}{{ default_meta_title|default:"Petro Sanat Taraz" }}{% endblock %}</title>
       <meta name="description" content="{% block meta_description %}{{ default_meta_description|default:"توضیحات سایت" }}{% endblock %}">
 
