Add video field to home page

--- a/core/templates/home/index.html
+++ b/core/templates/home/index.html
@@ -90,6 +90,25 @@
           </section>
           <!-- Fanfact area end here -->
 
+                    <!-- Video area start here -->
+            <div class="banner-video mt-0">
+                <div class="container">
+                    <div class="banner-video__image image">
+{% if banner.video %}
+  <video width="600" style="padding: 20px;
+    display: flex;
+  align-items: center;
+
+width: 100%;" controls>
+      <source src="{{ banner.video.url }}" type="video/mp4">
+      مرورگر شما از پخش ویدیو پشتیبانی نمی‌کند.
+  </video>
+{% endif %}
+                    </div>
+                </div>
+            </div>
+            <!-- Video area end here -->
+
 <!-- Story Area Start -->
             <section class="story-area pt-120 pb-120">
                 <div class="container">
