Add video to blog details pagr

--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -69,4 +69,22 @@
                 </div>
             </section>
             <!-- Blog details area end here -->
+                    <!-- Video area start here -->
+            <div class="banner-video mt-0">
+                <div class="container">
+                    <div class="banner-video__image image">
+{% if article.video %}
+  <video width="600" style="padding: 20px;
+    display: flex;
+  align-items: center;
+
+width: 100%;" controls>
+      <source src="{{ article.video.url }}" type="video/mp4">
+      مرورگر شما از پخش ویدیو پشتیبانی نمی‌کند.
+  </video>
+{% endif %}
+                    </div>
+                </div>
+            </div>
+            <!-- Video area end here -->
 {% endblock %}
