--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="{{ og_title|default:default_meta_title }}">
+    <meta property="og:description" content="{{ og_description|default:default_meta_description }}">
+    <meta property="og:url" content="{{ canonical_url }}">
+    {% if og_image %}
+    <meta property="og:image" content="{{ og_image }}">
+    {% endif %}
+
     <meta name="robots" content="{{ meta_robots|default:'index, follow' }}">
 
 
