Fix a bug in blog pagination

--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -54,14 +54,14 @@
 
                     {% if article.has_previous %}
                     <span>صفحه قبل</span>
-                    <a class="prev" href="{% url 'blog:blog_detail_page' article.slug page.previous_page_number %}">
+                    <a class="prev" href="{% url 'blog:blog_page' article.previous_page_number %}">
 
                     <i class="fa-regular fa-arrow-right"></i>
                     </a>
                     {% endif %}
 
                     {% if article.has_next %}
-                     <a class="next" href="{% url 'blog:blog_detail_page' article.slug page.next_page_number %}">
+                     <a class="next" href="{% url 'blog:blog_page' article.next_page_number %}">
                      <i class="fa-regular fa-arrow-left"></i>
                     </a><span>صفحه بعد</span>
                 {% endif %}
