--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
         {% endif %}
       {% endblock %}
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
 
     <link rel="stylesheet" href="{% static 'css/new/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/new/ckeditor5.css' %}">
@@ -244,6 +246,8 @@
         <i class="fa-solid fa-chevron-up"></i>
     </button> -->
     <!-- Back to top btn area end here -->
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js" defer></script>
 
     <!-- Jquery 3.7.0 Min Js -->
     <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
@@ -273,6 +277,15 @@
     <script src="{% static 'js/gsap/ScrollSmoother.min.js' %}"></script>
     <!-- Script Js -->
     <script src="{% static 'js/script.js' %}"></script>
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const lightbox = GLightbox({
+            selector: '.glightbox',
+            loop: true,
+            touchNavigation: true
+        });
+    });
+    </script>
 </body>
 
 
