--- a/product/templates/product-type.html
+++ b/product/templates/product-type.html
@@ -56,5 +56,23 @@
                 </div>
             </section>
             <!-- Case details area end here -->
+                            <!-- Video area start here -->
+            <div class="banner-video mt-0">
+                <div class="container">
+                    <div class="banner-video__image image">
+{% if type.video %}
+  <video width="600" style="padding: 20px;
+    display: flex;
+  align-items: center;
+
+width: 100%;" controls>
+      <source src="{{ type.video.url }}" type="video/mp4">
+      مرورگر شما از پخش ویدیو پشتیبانی نمی‌کند.
+  </video>
+{% endif %}
+                    </div>
+                </div>
+            </div>
+            <!-- Video area end here -->
 
 {% endblock %}
