--- a/templates/base.html
+++ b/templates/base.html
@@ -180,19 +180,27 @@
                                   </svg>
                               </a>
 
-                              <a href="{{ setting.telegram }}">
-                                  <svg width="24" height="20" viewBox="0 0 24 20" fill="none"
-                                      xmlns="http://www.w3.org/2000/svg">
-                                      <path
-                                          d="M9.41718 13.1809L9.02018 18.7649C9.58818 18.7649 9.83418 18.5209 10.1292 18.2279L12.7922 15.6829L18.3102 19.7239C19.3222 20.2879 20.0352 19.9909 20.3082 18.7929L23.9302 1.82092L23.9312 1.81992C24.2522 0.323917 23.3902 -0.261083 22.4042 0.105917L1.11418 8.25692C-0.338822 8.82092 -0.316822 9.63092 0.867178 9.99792L6.31018 11.6909L18.9532 3.77992C19.5482 3.38592 20.0892 3.60392 19.6442 3.99792L9.41718 13.1809Z"
-                                          fill="white" />
-                                  </svg>
-                              </a>
-                              <a href="{{ setting.instagram }}" target="_blank" aria-label="Instagram">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
-                                  <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.35 3.608 1.325.975.975 1.263 2.242 1.325 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.35 2.633-1.325 3.608-.975.975-2.242 1.263-3.608 1.325-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.35-3.608-1.325-.975-.975-1.263-2.242-1.325-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.35-2.633 1.325-3.608.975-.975 2.242-1.263 3.608-1.325C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.77.131 4.575.466 3.635 1.406 2.695 2.346 2.36 3.541 2.301 4.823.013 8.332 0 8.741 0 12c0 3.259.013 3.668.072 4.948.059 1.282.394 2.477 1.334 3.417.94.94 2.135 1.275 3.417 1.334C8.332 23.987 8.741 24 12 24c3.259 0 3.668-.013 4.948-.072 1.282-.059 2.477-.394 3.417-1.334.94-.94 1.275-2.135 1.334-3.417C23.987 15.668 24 15.259 24 12c0-3.259-.013-3.668-.072-4.948-.059-1.282-.394-2.477-1.334-3.417-.94-.94-2.135-1.275-3.417-1.334C15.668.013 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.881 0 1.44 1.44 0 012.881 0z"/>
+<a href="{{ setting.instagram }}" target="_blank" aria-label="Instagram">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
+    <path d="M12 2.2c3.2 0 3.6.01 4.9.07 1.2.05 1.9.24 2.35.4.59.23 1.02.5 1.46.94.44.44.71.87.94 1.46.16.45.35 1.15.4 2.35.06 1.3.07 1.7.07 4.9s-.01 3.6-.07 4.9c-.05 1.2-.24 1.9-.4 2.35-.23.59-.5 1.02-.94 1.46-.44.44-.87.71-1.46.94-.45.16-1.15.35-2.35.4-1.3.06-1.7.07-4.9.07s-3.6-.01-4.9-.07c-1.2-.05-1.9-.24-2.35-.4a3.9 3.9 0 0 1-1.46-.94 3.9 3.9 0 0 1-.94-1.46c-.16-.45-.35-1.15-.4-2.35C2.21 15.6 2.2 15.2 2.2 12s.01-3.6.07-4.9c.05-1.2.24-1.9.4-2.35.23-.59.5-1.02.94-1.46.44-.44.87-.71 1.46-.94.45-.16 1.15-.35 2.35-.4C8.4 2.21 8.8 2.2 12 2.2m0-2.2C8.7 0 8.3.01 7 .07 5.68.12 4.7.33 3.9.64a6.1 6.1 0 0 0-2.26 1.48A6.1 6.1 0 0 0 .16 4.37C-.15 5.17-.36 6.15-.41 7.47-.47 8.77-.48 9.17-.48 12s.01 3.23.07 4.53c.05 1.32.26 2.3.57 3.1.31.8.73 1.45 1.48 2.26a6.1 6.1 0 0 0 2.26 1.48c.8.31 1.78.52 3.1.57 1.3.06 1.7.07 4.9.07s3.6-.01 4.9-.07c1.32-.05 2.3-.26 3.1-.57a6.1 6.1 0 0 0 2.26-1.48 6.1 6.1 0 0 0 1.48-2.26c.31-.8.52-1.78.57-3.1.06-1.3.07-1.7.07-4.9s-.01-3.6-.07-4.9c-.05-1.32-.26-2.3-.57-3.1a6.1 6.1 0 0 0-1.48-2.26A6.1 6.1 0 0 0 20.1.64c-.8-.31-1.78-.52-3.1-.57C15.6.01 15.2 0 12 0Z"/>
+    <path d="M12 5.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4Zm0 10.2a4 4 0 1 1 0-8 4 4 0 0 1 0 8Z"/>
+    <circle cx="18.4" cy="5.6" r="1.44"/>
+  </svg>
+</a>
+
+                                                                                            <a href="{{ setting.facebook }}">
+                                <svg width="14" height="24" viewBox="0 0 14 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M8.85941 24V13.0533H12.5323L13.0833 8.78588H8.85941V6.06176C8.85941 4.82664 9.20099 3.98492 10.9742 3.98492L13.232 3.98399V0.167076C12.8415 0.116334 11.5012 0 9.94123 0C6.68371 0 4.45356 1.98836 4.45356 5.63912V8.78588H0.769531V13.0533H4.45356V24H8.85941Z"
+                                        fill="white" />
                                 </svg>
-                              </a>
+                            </a>
+                                <a href="{{ setting.whatsapp }}" target="_blank" aria-label="WhatsApp">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
+    <path d="M20.52 3.48A11.82 11.82 0 0 0 12.01 0C5.38 0 .01 5.37.01 12c0 2.12.55 4.18 1.6 6.01L0 24l6.2-1.62a11.95 11.95 0 0 0 5.81 1.48h.01c6.63 0 12-5.37 12-12a11.82 11.82 0 0 0-3.49-8.38ZM12.01 21.5c-1.83 0-3.61-.49-5.16-1.42l-.37-.22-3.68.96.98-3.59-.24-.37a9.5 9.5 0 0 1-1.46-5.01c0-5.25 4.27-9.51 9.52-9.51 2.54 0 4.93.99 6.72 2.78a9.45 9.45 0 0 1 2.79 6.73c0 5.25-4.27 9.51-9.52 9.51Zm5.25-7.12c-.29-.15-1.7-.84-1.96-.94-.26-.1-.45-.15-.64.15-.19.29-.74.94-.91 1.13-.17.2-.34.22-.63.07-.29-.15-1.22-.45-2.33-1.43-.86-.77-1.44-1.72-1.61-2.01-.17-.29-.02-.45.13-.6.13-.13.29-.34.44-.51.15-.17.19-.29.29-.48.1-.19.05-.36-.02-.51-.07-.15-.64-1.55-.88-2.12-.23-.55-.47-.47-.64-.48h-.55c-.19 0-.51.07-.78.36-.26.29-1.02.99-1.02 2.41 0 1.42 1.05 2.79 1.19 2.98.15.19 2.07 3.17 5.01 4.45.7.3 1.25.48 1.67.61.7.22 1.33.19 1.83.12.56-.08 1.7-.7 1.94-1.38.24-.68.24-1.26.17-1.38-.07-.12-.26-.19-.56-.34Z"/>
+  </svg>
+</a>
                           </div>
 
                     </div>
