--- a/templates/base.html
+++ b/templates/base.html
@@ -167,7 +167,7 @@
                             {% endif %}
                             </a>
                             <div class="social-icons mt-20">
-                              <a href="{{ setting.linkedin }}">
+                              <a href="{{ setting.linkedin }}" target="_blank">
                                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                       xmlns="http://www.w3.org/2000/svg">
                                       <path
@@ -188,7 +188,7 @@
   </svg>
 </a>
 
-                                                                                            <a href="{{ setting.facebook }}">
+                                                                                            <a href="{{ setting.facebook }}" target="_blank">
                                 <svg width="14" height="24" viewBox="0 0 14 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -209,6 +209,9 @@
                         <ul>
                             <li>
                                 <a href='{% url 'home:about' %}'>درباره ما</a>
+                            </li>
+                            <li>
+                                <a href='{% url 'project:project' %}'>پروژه ها</a>
                             </li>
                             <li>
                                 <a href='{% url 'blog:blog' %}'>وبلاگ</a>
@@ -235,7 +238,7 @@
                     </div>
                 </div>
                 <div class="footer__copyright">
-                    <p>تمام حقوق مربوط به کپی رایت برای پترو صنعت تاراز محفوظ می باشد.</p>
+                    <p>کلیه حقوق این سایت متعلق به شرکت دانش بنیان پترو صنعت تاراز میباشد</p>
 
 
                 </div>
