--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6857,4 +6857,25 @@ body.ltr .contact__item-left * {
     }
 }
 
+#backToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+  background-color: rgba(105, 105, 105, 0.36);
+  color: white;
+  border: none;
+  outline: none;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  font-size: 22px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+#backToTopBtn:hover {
+  background-color: #c9182b;
+}
 /*# sourceMappingURL=style.css.map */
